--- a/assets/style.css
+++ b/assets/style.css
@@ -29,40 +29,70 @@ nav ul {
     min-width:300px;
 }
 
-/* Main Style */
-main {
+/* Section Styles */
+section {
     display:flex;
     flex-wrap: wrap;
 }
 
+.aside {
+    width: 25%;
+}
 
-/* Projects Section Styles */
-.projects {
-    flex: 2;
+.content {
+    flex: 4;
+    width: 75%;
+}
+
+.projects-1 {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    width: 100%;
 }
 
-/* Project Card Styles */
+/* Products */
+.projects-2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap;
+  align-items: flex-end;
+}
+
 .card {
-    border-style: solid;
-    border-width: 6px;
-    border-color: lightblue;
-    flex: 0 0 500px;
+  border-style: solid;
+  border-width: 6px;
+  border-color:lightblue;
+  flex: 1 0 0;
+  margin-top: 10px;
 }
 
-.card header {
-    text-align: center;
+.card img {
+    height: 150px;
+    width: 100%;
 }
 
-.card image {
-    width: 100%
+.primary-image-column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex:2;
 }
 
-@media screen and (max-width: 768px) {
-    main,
-    nav {
-      flex-direction: column;
+.primary-image {
+    height: 500px;
+    object-fit: cover;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 500px) {
+    .section {
+      width: 100%;
     }
   }
+
+  @media screen and (max-width: 1000px) {
+    .projects {
+      width: 100%;
+    }
+  } 
