--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,38 @@
 body {
     background-color:#edeef6;
-    font-family:Arial, Helvetica, sans-serif;
-    color:#454545;
-    font-size:16px;
+    font-family:'Courier New', Courier, monospace;
+    color:#35383e;
+    font-size:18px;
 
 }
 
 /* Heading Styles */
 h1 {
     font-size:72px;
+    font-weight: bold;
 }
 
 h2 {
     font-size: 42px;
     text-align: right;
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+h4 {
+    font-size: 16px;
+    margin-top: -20px;
+    margin-bottom: 10px;
 }
 
 /* Header Section Style */
 header {
     display:flex;
-    padding-top:10px;
     margin:100px;
 }
 
@@ -31,7 +44,6 @@ nav ul {
 }
 
 main {
-    margin-right: 20px;
     margin-left: 20px;
 }
 
@@ -39,14 +51,16 @@ main {
 section {
     display:flex;
     flex: flex-wrap;
-    margin-top: 30px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 .aside {
     width: 25%;
     border-right-style: solid;
-    border-color:blueviolet;
-    padding-right: 20px;
+    border-color:#3e5373;
+    border-width: thick;
+    padding-right: 50px;
     white-space: nowrap;
 }
 
@@ -73,12 +87,13 @@ section {
   justify-content: space-between;
 }
 
-.card {
+.project {
   border-style: solid;
   border-width: 6px;
   border-color:lightblue;
   flex: 0.49;
   margin-top: 15px;
+  position: relative;
 }
 
 .card img {
@@ -96,6 +111,14 @@ section {
 .primary-image {
     height: 500px;
     object-fit: cover;
+}
+
+.project-title {
+    position: absolute;
+    bottom: 20px;
+    background-color: lightblue;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
