--- a/assets/style.css
+++ b/assets/style.css
@@ -40,46 +40,86 @@ header {
 nav ul {
     display:flex;
     justify-content:space-between;
-    min-width:300px;
+    list-style-type: none;
+    min-width: 300px;
 }
 
-main {
-    margin-left: 20px;
-}
-
-/* Section Styles */
+/* Row Styles */
 section {
     display:flex;
-    flex: flex-wrap;
+    flex: wrap;
     padding-top: 25px;
     padding-bottom: 25px;
+    max-width: 1500px;
 }
 
+/* Aside Style (About, Work, & Contact) */
 .aside {
-    width: 25%;
+    flex-basis: 25%;
     border-right-style: solid;
     border-color:#3e5373;
     border-width: thick;
     padding-right: 50px;
-    white-space: nowrap;
+    margin-right: 50px;
 }
 
+/* About Content Style */
+.content-2 {
+    flex: 75%;
+    width: 100%;
+    float: right;
+}
+
+/* Work Content Styel */
 .content {
-    flex: 4;
-    width: 75%;
+    flex: 75%;
+    width: 100%;
     justify-content: space-between;
-    padding-left: 40px;
-    padding-right: 80px;
 }
 
+/* Profile Image Style */
+.profile {
+    display: flex;
+}
+
+.maria {
+    flex: 1;
+    padding-top:30px;
+}
+
+.cunha {
+    width: 300px;
+    height: 300px;
+} 
+
+.bio {
+    flex: 2;
+    width: 100%;
+    float: right;
+}
+
+.primary-image-column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex:2;
+    position: relative;
+    border-style: solid;
+    border-width: 10px;
+    border-color:lightblue;
+}
+
+/* About Me Summary Style */
+
+/* Large Image */
 .projects-1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
+    justify-content: space-between;
 }
 
-/* Products */
+/* Smaller Images */
 .projects-2 {
   display: flex;
   flex-direction: row;
@@ -89,7 +129,7 @@ section {
 
 .project {
   border-style: solid;
-  border-width: 6px;
+  border-width: 10px;
   border-color:lightblue;
   flex: 0.49;
   margin-top: 15px;
@@ -106,11 +146,23 @@ section {
     flex-direction: column;
     flex-basis: 100%;
     flex:2;
+    position: relative;
+    border-style: solid;
+    border-width: 10px;
+    border-color:lightblue;
 }
 
 .primary-image {
     height: 500px;
     object-fit: cover;
+}
+
+.primary-project-title {
+    position: absolute;
+    bottom: -80px;
+    background-color: lightblue;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .project-title {
