--- a/assets/style.css
+++ b/assets/style.css
@@ -44,6 +44,9 @@ nav ul {
     min-width: 300px;
 }
 
+/* Link Styles */
+
+
 /* Row Styles */
 section {
     display:flex;
@@ -137,8 +140,8 @@ section {
 }
 
 .card img {
-    height: 150px;
-    width: 100%;
+    height: 155px;
+    width: 493px;
 }
 
 .primary-image-column {
@@ -172,6 +175,16 @@ section {
     padding-right: 10px;
     padding-left: 10px;
 }
+
+.footer {
+    display: flex;
+}
+
+.footer > div {
+        margin: 10px;
+        padding: 20px;
+
+      }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 500px) {
