--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,15 @@ h4 {
     margin-bottom: 10px;
 }
 
+img {
+    filter: alpha(opacity=100);
+    opacity: 1;
+}
+img:hover {
+    filter: alpha(opacity=70);
+    opacity: 0.7;
+}
+
 /* Header Section Style */
 header {
     display:flex;
