--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@ body {
 
 }
 
-/* Heading Styles */
+/* Header Styles */
 h1 {
     font-size:72px;
     font-weight: bold;
@@ -30,6 +30,7 @@ h4 {
     margin-bottom: 10px;
 }
 
+/* Image Styles */
 img {
     filter: alpha(opacity=100);
     opacity: 1;
@@ -53,10 +54,7 @@ nav ul {
     min-width: 300px;
 }
 
-/* Link Styles */
-
-
-/* Row Styles */
+/* Section Style */
 section {
     display:flex;
     flex: wrap;
@@ -75,14 +73,14 @@ section {
     margin-right: 50px;
 }
 
-/* About Content Style */
+/* "About" Content Style */
 .content-2 {
     flex: 75%;
     width: 100%;
     float: right;
 }
 
-/* Work Content Styel */
+/* Work Content Style */
 .content {
     flex: 75%;
     width: 100%;
@@ -110,6 +108,7 @@ section {
     float: right;
 }
 
+/* Column Style - Primary Image */
 .primary-image-column {
     display: flex;
     flex-direction: column;
@@ -121,9 +120,22 @@ section {
     border-color:lightblue;
 }
 
-/* About Me Summary Style */
+/* Primary Image Style */
+.primary-image {
+    height: 500px;
+    object-fit: cover;
+}
 
-/* Large Image */
+/* Primary Image Title */
+.primary-project-title {
+    position: absolute;
+    bottom: -100px;
+    background-color: lightblue;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+/* Columns Style - Small Project Images */
 .projects-1 {
     display: flex;
     flex-direction: row;
@@ -131,7 +143,6 @@ section {
     justify-content: space-between;
 }
 
-/* Smaller Images */
 .projects-2 {
   display: flex;
   flex-direction: row;
@@ -139,6 +150,7 @@ section {
   justify-content: space-between;
 }
 
+/* Small Project Images Style */
 .project {
   border-style: solid;
   border-width: 10px;
@@ -153,30 +165,7 @@ section {
     width: 493px;
 }
 
-.primary-image-column {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex:2;
-    position: relative;
-    border-style: solid;
-    border-width: 10px;
-    border-color:lightblue;
-}
-
-.primary-image {
-    height: 500px;
-    object-fit: cover;
-}
-
-.primary-project-title {
-    position: absolute;
-    bottom: -80px;
-    background-color: lightblue;
-    padding-right: 10px;
-    padding-left: 10px;
-}
-
+/* Small Project Titles */
 .project-title {
     position: absolute;
     bottom: 20px;
@@ -185,8 +174,10 @@ section {
     padding-left: 10px;
 }
 
+/* Footer */
 .footer {
     display: flex;
+    flex-direction: row;
 }
 
 .footer > div {
@@ -196,7 +187,7 @@ section {
       }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1000px) {
     .section {
       width: 100%;
     }
