--- a/style.css
+++ b/style.css
@@ -1,60 +1,83 @@
+/* Global Styles */
 body {
     background-color:#edeef6;
     font-family:'Courier New', Courier, monospace;
     color:#35383e;
     font-size:18px;
-
 }
 
-/* Header Styles */
+/* HEADING STYLES */
+/* Main Heading */
 h1 {
+    color:white;
     font-size:72px;
-    font-weight: bold;
+    padding-left: 50px;
 }
-
+/* Aside Headings */
 h2 {
     font-size: 42px;
-    text-align: right;
     font-weight: bold;
+    text-align: right;
 }
-
+/* Project Title Headings */
 h3 {
+    color: black;
     font-size: 24px;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: -15px;
 }
 
+/* Project Subtitle Headings */
 h4 {
     font-size: 16px;
     margin-top: -20px;
     margin-bottom: 10px;
 }
 
-/* Image Styles */
+/* IMAGES STYLE */
+/* Images Styles */
 img {
     filter: alpha(opacity=100);
     opacity: 1;
 }
+/* Images Style When Hovered Over */
 img:hover {
     filter: alpha(opacity=70);
     opacity: 0.7;
 }
 
-/* Header Section Style */
+/* HEADER SECTION STYLE */
 header {
+    background-image: url('header-image.jpg');
     display:flex;
-    margin:100px;
+    flex-wrap: wrap;
+    margin: 10px;
 }
 
-/* Nav Style */
-nav ul {
-    display:flex;
-    justify-content:space-between;
+/* NAV STYLE */
+nav {
+    position: relative;
+    padding-top: 25px;
+}
+ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     list-style-type: none;
-    min-width: 300px;
 }
 
-/* Section Style */
+/* LINK STYLES */
+a {
+    padding-left: 40px;
+    font-weight: bold;
+    font-size: 24px;
+}
+/* Nav Style When Clicked On */
+a:visited {
+    color: purple;
+}
+
+/* SECTION STYTLE */
 section {
     display:flex;
     flex: wrap;
@@ -63,138 +86,139 @@ section {
     max-width: 1500px;
 }
 
-/* Aside Style (About, Work, & Contact) */
+/* ASIDE STYLE (ABOUT, WORK, & CONTACT) */
 .aside {
     flex-basis: 25%;
     border-right-style: solid;
     border-color:#3e5373;
     border-width: thick;
-    padding-right: 50px;
     margin-right: 50px;
+    padding-right: 10px;
 }
 
+/* ABOUT SECTION */
 /* "About" Content Style */
-.content-2 {
-    flex: 75%;
-    width: 100%;
-    float: right;
-}
-
-/* Work Content Style */
-.content {
+.about-content {
     flex: 75%;
     width: 100%;
     justify-content: space-between;
 }
-
-/* Profile Image Style */
+/* Profile Section Style */
 .profile {
     display: flex;
 }
-
-.maria {
+/* Profile Image Style */
+.potrait-container {
     flex: 1;
-    padding-top:30px;
 }
-
-.cunha {
+.portrait {
     width: 300px;
     height: 300px;
+    padding-top: 30px;
 } 
-
+/* About Paragraph Style */
 .bio {
     flex: 2;
     width: 100%;
     float: right;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
-/* Column Style - Primary Image */
-.primary-image-column {
+/* WORK SECTION */
+/* Work Section Content Style */
+.primary-project-content {
+    flex: 75%;
+    width: 100%;
+    justify-content: space-between;
+}
+/* Top Work Portion (Primary Project) Style */
+.primary-project-column {
     display: flex;
     flex-direction: column;
-    flex-basis: 100%;
-    flex:2;
     position: relative;
+}
+/* Primary Project Photo Style */
+.primary-project-image {
     border-style: solid;
     border-width: 10px;
     border-color:lightblue;
-}
-
-/* Primary Image Style */
-.primary-image {
     height: 500px;
     object-fit: cover;
 }
-
-/* Primary Image Title */
+/* Primary Project Title Style */
 .primary-project-title {
-    position: absolute;
-    bottom: -100px;
     background-color: lightblue;
-    padding-right: 10px;
-    padding-left: 10px;
+    position: absolute;
+    bottom: 60px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
-/* Columns Style - Small Project Images */
-.projects-1 {
+/* Bottom Work Portion (Secondary Projects) Style */
+.secondary-project-content {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-
-.projects-2 {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+/* Secondary Project Card Style */
+.card {
+    display: flex;
+    resize: both;
+    border-style: solid;
+    border-width: 10px;
+    border-color:lightblue;
+    height: 150px;
+    width: 450px;
+    margin-top: 15px;
+  }
+/* Secondary Project Image Style */
+.project-image {
+    height: 150px;
+    width: 450px;
+    margin-left: -40px;
 }
-
-/* Small Project Images Style */
-.project {
-  border-style: solid;
-  border-width: 10px;
-  border-color:lightblue;
-  flex: 0.49;
-  margin-top: 15px;
-  position: relative;
-}
-
-.card img {
-    height: 155px;
-    width: 493px;
-}
-
-/* Small Project Titles */
+/* Secondary Project Title Style */
 .project-title {
-    position: absolute;
-    bottom: 20px;
     background-color: lightblue;
+    position: absolute;
     padding-right: 10px;
     padding-left: 10px;
+    margin-top: 60px;
 }
 
-/* Footer */
-.footer {
+/* "CONTACT" SECTION CONTENT STYLE */
+.contact {
     display: flex;
     flex-direction: row;
-}
-
-.footer > div {
-        margin: 10px;
-        padding: 20px;
-
+    justify-content: space-between;
+    padding-top: 50px;
+    font-size: 24px;
       }
 
+#phone {
+    padding-right: 25px;
+}
+
+#email {
+    padding-right: 25px;
+}
+
+#git-hub {
+    padding-right: 25px;
+}
+
+/* FOOTER STYLE */
+footer {
+    text-align: left;
+    padding-top: 50px;
+    padding-left: 200px;
+}
+
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 1000px) {
-    .section {
+@media screen and (max-width: 600px) {
+    .about-content .primary-project-content .secondary-project-content .contact {
       width: 100%;
     }
   }
-
-  @media screen and (max-width: 1000px) {
-    .projects {
-      width: 100%;
-    }
-  } 
