--- a/assets/style.css
+++ b/assets/style.css
@@ -6,36 +6,34 @@ body {
     font-size:18px;
 }
 
-/* HEADING STYLES */
-/* Main Heading */
+/* Heading Styles */
 h1 {
     color:white;
-    font-size:72px;
+    font-size: 72px;
     padding-left: 50px;
 }
-/* Aside Headings */
 h2 {
+    font-size: 48px;
+    color: blue;
+    background: lightblue;
+}
+h3 {
     font-size: 42px;
     font-weight: bold;
     text-align: right;
 }
-/* Project Title Headings */
-h3 {
-    color: black;
+h4 {
     font-size: 24px;
     font-weight: bold;
     margin-top: -15px;
 }
-
-/* Project Subtitle Headings */
-h4 {
+h5 {
     font-size: 16px;
     margin-top: -20px;
     margin-bottom: 10px;
 }
 
-/* IMAGES STYLE */
-/* Images Styles */
+/* Images Style */
 img {
     filter: alpha(opacity=100);
     opacity: 1;
@@ -46,18 +44,57 @@ img:hover {
     opacity: 0.7;
 }
 
-/* HEADER SECTION STYLE */
+/* Link Styles */
+a {
+    color: blue;
+    padding-left: 40px;
+    font-weight: bold;
+    font-size: 24px;
+}
+/* Link Style When Clicked On */
+a:visited {
+    color: purple;
+}
+
+/* Section Style */
+section {
+    display: flex;
+    flex: wrap;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    max-width: 1500px;
+}
+
+/* Header Section Style */
 header {
     background-image: url('images/header-image.jpg');
     display:flex;
     flex-wrap: wrap;
     margin: 10px;
+    height: 300px;
+    position: relative;
+}
+#subtitle {
+    position: absolute;
+    background: lightblue;
+    color: blue;
+    width: 700px;
+    margin-left: 710px;
+    margin-right: auto;
+    margin-top: 200px;
+    padding-left: 10px;
 }
 
-/* NAV STYLE */
+@media screen and (max-width: 1490px) {
+    #subtitle {
+        font-size: 18px;
+    }
+}
+
+/* Nav Style */
 nav {
     position: relative;
-    padding-top: 25px;
+    margin-bottom: 20px;
 }
 ul {
     display: flex;
@@ -65,30 +102,23 @@ ul {
     justify-content: space-between;
     list-style-type: none;
 }
-
-/* LINK STYLES */
-a {
+nav a:link {
     padding-left: 40px;
     font-weight: bold;
     font-size: 24px;
+    color: white;
 }
 /* Nav Style When Clicked On */
-a:visited {
-    color: purple;
+nav a:visited {
+    color: lightblue;
 }
 
-/* SECTION STYTLE */
-section {
-    display:flex;
-    flex: wrap;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    max-width: 1500px;
-}
-
-/* ASIDE STYLE (ABOUT, WORK, & CONTACT) */
+/* Aside Style (About, Work, & Contact) */
 .aside {
-    flex-basis: 25%;
+    display: grid;
+    grid-auto-flow: column;
+    align-content: right;
+    min-width: 250px;
     border-right-style: solid;
     border-color:#3e5373;
     border-width: thick;
@@ -96,18 +126,15 @@ section {
     padding-right: 10px;
 }
 
-/* ABOUT SECTION */
-/* "About" Content Style */
+/* About Section Style */
 .about-content {
     flex: 75%;
     justify-content: space-between;
     width: 1000px;
 }
-/* Profile Section Style */
 .profile {
     display: flex;
 }
-/* Profile Image Style */
 .potrait-container {
     flex: 1;
 }
@@ -116,7 +143,6 @@ section {
     height: 300px;
     padding-top: 30px;
 } 
-/* About Paragraph Style */
 .bio {
     flex: 2;
     width: 100%;
@@ -125,30 +151,28 @@ section {
     margin-right: 50px;
 }
 
-/* WORK SECTION */
-/* Work Section Content Style */
+/* Work Section Style */
 .primary-project-content {
     flex: 75%;
     width: 100%;
     justify-content: space-between;
 }
-/* Top Work Portion (Primary Project) Style */
 .primary-project-column {
     display: flex;
     flex-direction: column;
     position: relative;
 }
-/* Primary Project Photo Style */
+
+/* Top Work Section Style (Primary Image) */
 .primary-project-image {
     border-style: solid;
     border-width: 10px;
     border-color:lightblue;
     height: 500px;
     object-fit: cover;
-    width: 1000px;
+    width: 100%;
     margin-left: -40px;
 }
-/* Primary Project Title Style */
 .primary-project-title {
     background-color: lightblue;
     position: absolute;
@@ -157,14 +181,14 @@ section {
     padding-right: 15px;
 }
 
-/* Bottom Work Portion (Secondary Projects) Style */
+/* Bottom Work Section Style (Smaller Project Images) */
 .secondary-project-content {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 100%;
 }
-/* Secondary Project Card Style */
 .card {
     display: flex;
     resize: both;
@@ -172,16 +196,14 @@ section {
     border-width: 10px;
     border-color:lightblue;
     height: 150px;
-    width: 450px;
+    width: 500px;
     margin-top: 15px;
   }
-/* Secondary Project Image Style */
 .project-image {
     height: 150px;
-    width: 450px;
+    width: 500px;
     margin-left: -40px;
 }
-/* Secondary Project Title Style */
 .project-title {
     background-color: lightblue;
     position: absolute;
@@ -190,28 +212,20 @@ section {
     margin-top: 60px;
 }
 
-/* "CONTACT" SECTION CONTENT STYLE */
+/* Contact Section Style */
 .contact {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding-top: 50px;
     font-size: 24px;
+    width: 100%;
       }
-
-#phone {
+.contact > div {
     padding-right: 25px;
 }
 
-#email {
-    padding-right: 25px;
-}
-
-#git-hub {
-    padding-right: 25px;
-}
-
-/* FOOTER STYLE */
+/* Footer Style */
 footer {
     text-align: left;
     padding-top: 50px;
@@ -219,8 +233,8 @@ footer {
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-    .about-content .primary-project-content .secondary-project-content .contact {
+@media screen and (max-width: 900px) {
+.secondary-project-content {
       width: 100%;
     }
   }
